<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".fragments.AddNewEmployeeFragment">

    <!-- TODO: Update blank fragment layout -->
    <EditText
            android:id="@+id/etFirstNameUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_first_name"/>

    <EditText
            android:id="@+id/etLastNameUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_last_name"/>

    <EditText
            android:id="@+id/etAddressUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_street_address"/>

    <EditText
            android:id="@+id/etCityUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_city"/>

    <EditText
            android:id="@+id/etStateUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_state"/>

    <EditText
            android:id="@+id/etZipUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_zip_code"/>

    <EditText
            android:id="@+id/etTaxIDUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_tax_id"/>

    <EditText
            android:id="@+id/etPositionUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_position"/>

    <EditText
            android:id="@+id/etDepartmentUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_department"/>

    <Button
            android:id="@+id/btnUpdateEntryToDatabase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onClick"
            android:text="@string/submit_updated_employee"/>






</LinearLayout>